--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.Activities.Login_Menu">
+        <activity android:name=".View.Activities.Login_Menu_Act">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.Activities.Match_Setup" />
-        <activity android:name=".View.Activities.Match"></activity>
+        <activity android:name=".View.Activities.Match_Setup_Act" />
+        <activity android:name=".View.Activities.Match_Act"></activity>
     </application>
 
 </manifest>
